	not ready yet (N56637).
	(rpc_show_error_report): Fixed localization issue for the continue
	button and the dialog main text (N68736).

	* src/operations.cc (ip_check_cert_reply): Fixed localization
	issue for the continue button and the dialog main text (N68736).
	(ip_abort_cur): Fixed localization issue for the continue button
	and the dialog main text (N68736).

2007-09-11  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/repo.cc (reset_cat_list): Fixed a mistake using delete when
	g_free was the right choice. Removed gtk_list_store_clear to avoid
	a problem later reading an already freed memory block from
	emit_row_signal (N67698).
	(set_cat_list): Added gtk_list_store_clear here to clear the list
	(if needed) when setting a new GtkListStore (N67698).

2007-09-10  Mario Sanchez Prada  <msanchez@maemo.org>

	Done some changes to the smart download location choosing
	implementation:

	* src/settings.h, src/settings.cc (red_pill_download_packages_to_mmc):
	Renamed into download_packages_to_mmc, since it's an optional
	configuration value that is always functional, not only in
	red-pill mode. Changed its default value to true, since
	downloading packages to MMC is now the default behavior, which
	can be disabled with red-pill mode.

	* src/operations.cc (ip_install_with_info): Changed according to the
	renamed variable mentioned above. Replaced a hard-coded string
	with an appropriate logical_id: sfil_ni_not_enough_memory.

	* src/apt-worker.cc (class AptWorkerState): Removed
	saved_dir_cache_archives field, since it's not useful anymore with
	the current changes.
	(restore_dir_cache_archives): Removed, since it's not useful
	anymore with the current changes.
	(set_alt_dir_cache_archives): Removed.
	(set_dir_cache_archives): New. Allows to change the download
	location with an alternative path, updating the APT configuration
	but without creating a unique temporary directory each time it's
	called. It also allows to restore the default location by passing